--- a/TE11UD1/TE11UD1.css
+++ b/TE11UD1/TE11UD1.css
@@ -23,9 +23,12 @@
     height: 100vh;
 }
 
-@media (max-height:576px){
+@media (max-width:576px){
     .bg-red{
         height:10%;
+    }
+    .test{
+        height: 90%;
     }
 
 }
