--- a/scss/ejercicios1.css
+++ b/scss/ejercicios1.css
@@ -9,18 +9,8 @@ button {
 hover {
   background-color: #fff;
   color: #333;
-}/*# sourceMappingURL=ejercicios1.css.map */
+}
 
 .container {
-  width: 100%;
-  max-width: 1200px;
-  margin: 0 auto;
-  }
-  .container h1 {
-  font-size: 24px;
-  color: #333;
-  }
-  .container p {
-  font-size: 16px;
-  color: #666;
-  }
+  color: red;
+}/*# sourceMappingURL=ejercicios1.css.map */
