--- a/ecommerce-website-html-css-master/styles1.scss
+++ b/ecommerce-website-html-css-master/styles1.scss
@@ -1,11 +1,293 @@
+@import url("https://fonts.googleapis.com/css2?family=League+Spartan:wght@100;200;300;400;500;600;700;800;900&display=swap");
+/* global styles */
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "League Spartan", sans-serif;
+}
+
+h1 {
+  font-size: 50px;
+  line-height: 64px;
+  color: #222;
+}
+h2 {
+  font-size: 46px;
+  line-height: 54px;
+  color: #222;
+}
+h4 {
+  font-size: 20px;
+  color: #222;
+}
+h6 {
+  font-weight: 700;
+  font-size: 12px;
+}
+p {
+  font-size: 16px;
+  color: #465b52;
+  margin: 15px 0 20px 0;
+}
+.section-p1 {
+  padding: 40px 0;
+}
+.section-m1 {
+  margin: 40px 0;
+}
+
+button.normal {
+  font-size: 14px;
+  font-weight: 600px;
+  padding: 15px 30px;
+  color: #000;
+  background-color: #fff;
+  border-radius: 4px;
+  cursor: pointer;
+  border: none;
+  outline: none;
+  transition: 0.2s;
+}
+button.normal:hover {
+  background-color: #088178;
+  color: #fff;
+}
+body {
+  width: 100%;
+}
+/* header styles */
+#header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #e3e6f3;
+  padding: 20px 80px;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.06);
+  z-index: 999;
+  position:fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+}
+.header-list{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+&-icon a:hover{
+  color: #088178;
+}
+&-icon a {
+  color: #1a1a1a;
+  padding-left: 20px;
+  transition: 0.3s ease;
+}
+&-nav{
+  ul{
+  display: flex;
+
+  li {
+  list-style-type: none;
+  padding: 0 20px;
+  position: relative;
+}
+  a {
+  text-decoration: none;
+  font-size: 16px;
+  font-weight: 600;
+  color: #1a1a1a;
+  transition: 0.3s ease;
+}
+  a:hover,
+  a.active {
+  color: #088178;
+  content: "";
+}
+  li a:hover::after,
+  li a.active::after {
+  content: "";
+  width: 30%;
+  height: 2px;
+  background: #088178;
+  position: absolute;
+  bottom: -4px;
+  left: 20px;
+  }
+}}}
+/* home main styles */
+/* hero section styles */
+#hero {
+  background-image: url(images/hero4.png);
+  width: 100%;
+  height: 100vh;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  padding: 0 80px;
+
+ h4 {
+  padding-bottom: 15px;
+  font-size: 40px;
+}
+ h2{
+  font-size: 70px;
+
+}
+ h1 {
+  color: #088178;
+  font-size: 70px;
+
+}
+ button {
+  background: {
+    color: transparent;
+    image: url(images/button.png);
+    repeat: no-repeat;
+    size: cover;
+  }
+  width: 260px;
+  height: 60px;
+  border: 0;
+  cursor: pointer;
+  font-size: 20px;
+  font-weight: 700;
+  color: #088178;
+  padding: 14px 65px 14px 65px;
+}
+}
+/* feature section styles */
+
+#features{
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  .f-box {
+  width: 180px;
+  text-align: center;
+  padding: 25px 15px;
+  box-shadow: 20px 20px 34px rgba(0, 0, 0, 0.03);
+  border: 1px solid #cce7d0;
+  border-radius: 4px;
+  margin: 15px 0;
+  transition: box-shadow 0.3s;
+
+ &:hover {
+  box-shadow: 10px 10px 54px rgba(0, 0, 0, 0.1);
+}
+  img {
+  width: 100%;
+  margin-bottom: 10px;
+}
+  h6 {
+  display: inline-block;
+  padding: 9px 8px 6px 8px;
+  line-height: 1;
+  font-size: 14px;
+  border-radius: 4px;
+  color: #088178;
+  background-color: #fddde4;
+}
+ &:nth-child(2) h6 {
+  background-color: #cdebbc;
+}
+ &:nth-child(3) h6 {
+  background-color: #d1e8f2;
+}
+ &:nth-child(4) h6 {
+  background-color: #cdd4f8;
+}
+ &:nth-child(5) h6 {
+  background-color: #f6dbf6;
+}
+ &:nth-child(6) h6 {
+  background-color: #fff2e5;
+}
+  }
+}
+/* feature section styles */
+
+.product-section{
+.pro-collection {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  margin: 0 60px;
+}
+h1,
+p {
+  text-align: center;
+}
+.product-cart{
+  width: 280px;
+  border: 1px solid #ebebeb;
+  padding: 13px;
+  margin-bottom: 30px;
+  border-radius: 25px;
+  position: relative;
+  box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.02);
+  transition: box-shadow 0.2s;
+
+ &:hover {
+  box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.06);
+}
+  img {
+  width: 100%;
+  border-radius: 25px;
+}
+  span {
+  color: #969696;
+  font-weight: 500;
+  line-height: 30px;
+}
+  h4 {
+  font-size: 18px;
+  color: rgb(41, 41, 41);
+}
+  .stars {
+  color: #e6ae2c;
+  padding: 6px 0;
+}
+  .price {
+  color: #088178;
+  padding: 4px 0;
+}
+  .buy-icon {
+  color: #088178;
+  background-color: #c7e9e75e;
+  padding: 15px;
+  border-radius: 50px;
+  position: absolute;
+  right: 10px;
+  bottom: 10px;
+}}
+}
+
+/* off banner section styles */
+#off-banner {
+  background-image: url(images/banner/b2.jpg);
+  background-size: cover;
+  width: 100%;
+  height: 40vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+h4 {
+  color: #eaebf0;
+}
+h2 {
+  color: #eaebf0;
+  padding: 20px 0;
+}
+}
 /* new arrival section styles 
   this section gets the same styles 
   in featured products section
 */
-
 /* banners section styles */
-
-
 #banners {
     margin: 0 60px;  
   h2,  h4,  span {
